--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,21 +23,41 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="GPS"
-        android:id="@+id/textViewGPS"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Rotácia"
+        android:id="@+id/textViewRotation"
         android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button" />
+        android:layout_alignRight="@+id/buttonGPS"
+        android:layout_alignEnd="@+id/buttonGPS" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="GPS súradnice"
+        android:id="@+id/textViewGPS"
+        android:layout_below="@+id/buttonGPS"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="58dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Nadmorská výška"
         android:id="@+id/textViewAltitude"
-        android:layout_marginTop="31dp"
-        android:layout_below="@+id/textViewGPS"
+        android:layout_below="@+id/buttonGPS"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Kompas"
+        android:id="@+id/textViewCompass"
+        android:layout_alignTop="@+id/textViewRotation"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
