kopce v okoli, exit tlacidlo
kopce v okoli su pocitane cez vzdialenost v km

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,5 +72,16 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="102dp" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Zatvoriť"
+        android:id="@+id/buttonExit"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/buttonGPS"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 
 </RelativeLayout>
