--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,10 +67,10 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Najbližšie vrcholy"
         android:id="@+id/textPeaks"
-        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="83dp"
+        android:layout_above="@+id/buttonExit"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="102dp" />
+        android:layout_alignParentStart="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
