--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:clickable="false">
 
 
     <Button
@@ -26,9 +27,9 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Rotácia"
         android:id="@+id/textViewRotation"
-        android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/buttonGPS"
-        android:layout_alignEnd="@+id/buttonGPS" />
+        android:layout_alignTop="@+id/textViewGPS"
+        android:layout_toRightOf="@+id/buttonGPS"
+        android:layout_toEndOf="@+id/buttonGPS" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -38,8 +39,7 @@
         android:id="@+id/textViewGPS"
         android:layout_below="@+id/buttonGPS"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="58dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,19 +47,10 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Nadmorská výška"
         android:id="@+id/textViewAltitude"
-        android:layout_below="@+id/buttonGPS"
+        android:layout_below="@+id/textViewGPS"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Kompas"
-        android:id="@+id/textViewCompass"
-        android:layout_alignTop="@+id/textViewRotation"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="47dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,8 +58,8 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Najbližšie vrcholy"
         android:id="@+id/textPeaks"
-        android:layout_marginBottom="83dp"
-        android:layout_above="@+id/buttonExit"
+        android:layout_marginTop="110dp"
+        android:layout_below="@+id/textViewGPS"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
