--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,15 @@
     android:id="@+id/frameLayout"
     >
 
-    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--xmlns:tools="http://schemas.android.com/tools"-->
-        <!--android:id="@+id/relativeLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
-        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-        <!--tools:context=".MainActivity"-->
-        <!--android:clickable="false"-->
-        <!-->-->
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Zobraz vrcholy"
-            android:id="@+id/buttonGPS"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Zobraz vrcholy"
+        android:id="@+id/buttonGPS"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -38,18 +26,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="right|top" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Najbližšie vrcholy"
-        android:id="@+id/textPeaks"
-        android:layout_marginTop="47dp"
-        android:layout_below="@+id/textViewGPS"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="left|bottom" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -85,6 +61,17 @@
         android:layout_alignLeft="@+id/buttonExit"
         android:layout_alignStart="@+id/buttonExit"
         android:layout_gravity="right|center_vertical" />
-    <!--</LinearLayout>-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Najbližšie vrcholy"
+        android:id="@+id/textPeaks"
+        android:layout_marginTop="47dp"
+        android:layout_below="@+id/textViewGPS"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="left|top" />
 
 </FrameLayout>
