--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/frameLayout"
     >
-
 
     <Button
         android:layout_width="wrap_content"
@@ -26,6 +26,18 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="right|top" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Najbližšie vrcholy"
+        android:id="@+id/textPeaks"
+        android:layout_marginTop="47dp"
+        android:layout_below="@+id/textViewGPS"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="left|bottom" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,16 +74,5 @@
         android:layout_alignStart="@+id/buttonExit"
         android:layout_gravity="right|center_vertical" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Najbližšie vrcholy"
-        android:id="@+id/textPeaks"
-        android:layout_marginTop="47dp"
-        android:layout_below="@+id/textViewGPS"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="left|top" />
-
 </FrameLayout>
+
